# personal-essays

./: README.md  pyproject.toml
assets/: social-card.html
docs/: BingSiteAuth.xml  CNAME  index.html  llms.txt  robots.txt  rss.xml  sitemap.xml
docs/assets/: site.css
docs/essays/: how-to-read-cobb-process-theology.html  kingdom-of-god-essay.html  kingdom-of-god-short-essay.html  process-theology-quiz.html
essays/: how_to_read_cobb_process_theology.md  kingdom_of_god_essay.md  kingdom_of_god_short_essay.md  process_theology_quiz.md
personal_essays/: __init__.py  build_site.py
