[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-essays"
version = "0.1.0"
description = "A tiny static site generator for Matthew Prahl's essays."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown",
]

[project.scripts]
personal-essays-build = "personal_essays.build_site:main"

[tool.ruff]
target-version = "py312"
line-length = 120
